Updated wiki url

--- a/stonecraft/html/server.html
+++ b/stonecraft/html/server.html
@@ -53,7 +53,7 @@
                     <a class="btn btn-default btn-lg" role="button" href="/stonecraft/html/gallery.html">Gallery</a>
 					<a class="btn btn-primary btn-lg" role="button" href="#">Server</a>
 					<a class="btn btn-default btn-lg" role="button" href="https://github.com/MrCerealGuy/Stonecraft" target="_blank">Github</a>
-                    <a class="btn btn-default btn-lg" role="button" href="http://www.bc547.de/stonecraft/wiki">Wiki</a>
+                    <a class="btn btn-default btn-lg" role="button" href="https://github.com/MrCerealGuy/Stonecraft/wiki">Wiki</a>
                     <a class="btn btn-default btn-lg" role="button" href="/stonecraft/index.html#faq">FAQ</a>
                 </p>
             </div>
