--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -131,6 +131,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Mar. 20, 2017</b> - Stonecraft v1.0.10-alpha released!
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Feb. 11, 2017</b> - Stonecraft v1.0.9-alpha released!
 			</p>
 			
@@ -233,22 +239,22 @@
             <h2>Download</h2>
 			<br style="clear:left;" />
 			
-			<p><b>Current release: v1.0.9-alpha (Feb. 11, 2017)</b><br /><small>(pre-release version, maybe not stable yet). Use of Minetest engine 0.4.15.</small></p>
+			<p><b>Current release: v1.0.10-alpha (Mar. 20, 2017)</b><br /><small>(pre-release version, maybe not stable yet). Use of Minetest engine 0.4.15.</small></p>
 			
 			<div class="row">
                 <div class="col-xs-6 col-md-6">
 					<div>
-						<img src="./gfx/win-icon.png" style="float:left;margin-right:15px;">Stonecraft (Win 32-bit) <a href="http://www.mediafire.com/file/cv4w2w5pjxydosq/setup-stonecraft-1.0.9a-win32.exe" target="_blank">EXE</a> | <a href="http://www.mediafire.com/file/t3mdk2ubkmz5x5m/stonecraft-1.0.9-alpha-client-win32.zip" target="_blank">ZIP</a>
+						<img src="./gfx/win-icon.png" style="float:left;margin-right:15px;">Stonecraft (Win 32-bit) <a href="http://www.mediafire.com/file/428x1u8o4v46434/setup-stonecraft-1.0.10a-win32.exe" target="_blank">EXE</a> | <a href="http://www.mediafire.com/file/2wdkfudy0q5h27s/stonecraft-1.0.10-alpha-client-win32.zip" target="_blank">ZIP</a>
 						<br />
-						Stonecraft (Win 64-bit) <a href="http://www.mediafire.com/file/wjgu145i45zjwq4/setup-stonecraft-1.0.9a-win64.exe" target="_blank">EXE</a> | <a href="http://www.mediafire.com/file/510iluauan52n21/stonecraft-1.0.9-alpha-client-win64.zip" target="_blank">ZIP</a>
+						Stonecraft (Win 64-bit) <a href="http://www.mediafire.com/file/7qzm1z7uy32891p/setup-stonecraft-1.0.10a-win64.exe" target="_blank">EXE</a> | <a href="http://www.mediafire.com/file/fc0jbpslx61acpb/stonecraft-1.0.10-alpha-client-win64.zip" target="_blank">ZIP</a>
 					</div>
 				</div>
 				
 				 <div class="col-xs-6 col-md-6">
 					<div>
-						<img src="./gfx/linux-icon.png" style="float:left;margin-right:15px;">Stonecraft (Linux 64-bit) <a href="http://www.mediafire.com/file/a6a82u6u4quj5d5/stonecraft-1.0.9-alpha-client-linux.tar.gz" target="_blank">TAR.GZ</a>
+						<img src="./gfx/linux-icon.png" style="float:left;margin-right:15px;">Stonecraft (Linux 64-bit) <a href="http://www.mediafire.com/file/12o5o04epdm3qpl/stonecraft-1.0.10-alpha-client-linux.tar.gz" target="_blank">TAR.GZ</a>
 						<br />
-						Dedicated Server (Linux 64-bit) <a href="http://www.mediafire.com/file/7h3j1589g53b456/stonecraft-1.0.9-alpha-server-linux.tar.gz" target="_blank">TAR.GZ</a>
+						Dedicated Server (Linux 64-bit) <a href="http://www.mediafire.com/file/0dbzacbigh4wp3h/stonecraft-1.0.10-alpha-server-linux.tar.gz" target="_blank">TAR.GZ</a>
 					</div>
 				</div>
 			</div>
