Added itch.io link

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,7 +132,7 @@
 			<br style="clear:left;" />
 			
 			<p>
-				<b>Mar. 27, 2017</b> - Stonecraft v1.1.0-alpha released!
+				<b>Mar. 27, 2017</b> - Stonecraft v1.1.0-alpha released! Published on the indie video game website <a href="https://mrcerealguy.itch.io/stonecraft" target="_blank">itch.io</a>. Download now and leave a comment!
 			</p>
 			
 			<br style="clear:left;" />
