Added itch.io download widget

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -247,7 +247,7 @@
 			<br style="clear:left;" />
 			
 			<p><b>Current release: v1.1.0-alpha (Mar. 27, 2017)</b><br /><small>(pre-release version, maybe not stable yet). Use of Minetest engine 0.4.15.</small></p>
-			
+			<!--
 			<div class="row">
                 <div class="col-xs-6 col-md-6">
 					<div>
@@ -264,7 +264,9 @@
 						Dedicated Server (Linux 64-bit) <a href="http://www.mediafire.com/file/28aecdgqod15wev/stonecraft-1.1.0-alpha-server-linux.tar.gz" target="_blank">TAR.GZ</a>
 					</div>
 				</div>
-			</div>
+			</div>-->
+			
+			<iframe frameborder="0" src="https://itch.io/embed/130455" width="552" height="167"></iframe>
 			
 			<br style="clear:left;" />
 
