Changed faq and updates news area

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Apr. 09, 2017</b> - 1.200+ Downloads in 12 days! Thank you for that successful launch of Stonecraft!
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Mar. 27, 2017</b> - Stonecraft v1.1.0-alpha released! Published on the indie video game website <a href="https://mrcerealguy.itch.io/stonecraft" target="_blank">itch.io</a>. Download now and leave a comment!
 			</p>
 			
@@ -292,7 +298,7 @@
                     </div>
                     <div id="lags" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <p>If you experience lags, then you should first deactivate shaders and other graphic effects like the simulation of erosion, see advanced settings. On weak hardware, I would suggest to choose 'Stonecraft Light' in the world creation settings.</p>
+                            <p>If you experience lags, then you should first deactivate shaders and other graphic effects. On weak hardware, I would suggest to choose not much options in the world creation settings.</p>
                         </div>
                     </div>
                 </div>
@@ -367,7 +373,7 @@
                     </div>
                     <div id="host" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <p>You can simple host a game over LAN or you run a dedicated server.</p>
+                            <p>You can simple host a game over LAN or you run a dedicated server. In my wiki you'll find more information.</p>
                         </div>
                     </div>
                 </div>
