--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Apr. 15, 2017</b> - Stonecraft v1.1.1-alpha released! Over 3.100+ Downloads!
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Apr. 09, 2017</b> - 1.200+ Downloads in 12 days! Thank you for that successful launch of Stonecraft!
 			</p>
 			
@@ -252,7 +258,7 @@
             <h2>Download</h2>
 			<br style="clear:left;" />
 			
-			<p><b>Current release: v1.1.0-alpha (Mar. 27, 2017)</b><br /><small>(pre-release version, maybe not stable yet). Use of Minetest engine 0.4.15.</small></p>
+			<p><b>Current release: v1.1.1-alpha (Apr. 15, 2017)</b><br /><small>(pre-release version, maybe not stable yet). Use of Minetest engine 0.4.15 and higher.</small></p>
 			<!--
 			<div class="row">
                 <div class="col-xs-6 col-md-6">
