--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>May. 04, 2017</b> - Stonecraft v1.1.7-alpha released! Over 6.500+ Downloads!
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Apr. 15, 2017</b> - Stonecraft v1.1.1-alpha released! Over 3.100+ Downloads!
 			</p>
 			
