Updated WorldAtlas server software

--- a/stonecraft/html/server.html
+++ b/stonecraft/html/server.html
@@ -115,7 +115,7 @@
 				
 			</div>
 			
-			<h3>Stonecraft WorldAtlas (temporarily deactivated)</h3>
+			<h3>Stonecraft WorldAtlas</h3>
 			
 			<p>
 				<i>Updated automatically every 24hrs. Start <i>Stonecraft WorldAtlas</i> by clicking the image.</i>
@@ -123,7 +123,7 @@
 			
 			<div class="container" style="margin-top:auto; margin-bottom:auto; text-align:center;">
 
-				<a href="http://stonecraft.ddns.net/map.html" target="_blank"><img src="../gfx/stonecraft-mapviewer-1000.png" style=""></a>
+				<a href="http://stonecraft.ddns.net/worldatlas.html" target="_blank"><img src="../gfx/stonecraft-mapviewer-1000.png" style=""></a>
 			</div>
 			
 			
