--- a/grenzwissenschaften/index.html
+++ b/grenzwissenschaften/index.html
@@ -12,7 +12,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
     <link href="http://www.bc547.de/infotechnik/css/jquery.fancybox.min.css" rel="stylesheet">
-    <link href="http://www.bc547.de/infotechnik/css/bootstrap.min.css" rel="stylesheet">	
+    <link href="/grenzwissenschaften/css/bootstrap.min.css" rel="stylesheet">	
 	<link href="/grenzwissenschaften/css/grenz.css" rel="stylesheet" type="text/css" />
 	<link href="/grenzwissenschaften/css/equal-height-columns.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="http://www.bc547.de/infotechnik/css/prettify.css">
