--- a/grenzwissenschaften/html/100-wichtige-bibeltexte.html
+++ b/grenzwissenschaften/html/100-wichtige-bibeltexte.html
@@ -9,7 +9,7 @@
 
 		<title>bc547.de - 100 wichtige Bibelstellen</title>
 
-		<link href="http://www.bc547.de/infotechnik/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/grenzwissenschaften/css/bootstrap.min.css" rel="stylesheet">	
 		<link href="/grenzwissenschaften/css/grenz.css" rel="stylesheet" type="text/css" />
 		
 	</head>
