--- a/grenzwissenschaften/html/swedenborg.html
+++ b/grenzwissenschaften/html/swedenborg.html
@@ -8,7 +8,7 @@
 		
 		<title>bc547.de - Emanuel Swedenborg</title>
 
-		<link href="http://www.bc547.de/infotechnik/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/grenzwissenschaften/css/bootstrap.min.css" rel="stylesheet">	
 		<link href="/grenzwissenschaften/css/grenz.css" rel="stylesheet" type="text/css" />
 
 	</head>
