--- a/grenzwissenschaften/html/emoto.html
+++ b/grenzwissenschaften/html/emoto.html
@@ -9,7 +9,7 @@
 
 		<title>bc547.de - Grenzwissenschaften - Gedanken manifestieren sich im Wasser - Dr. Masaru Emoto</title>
 
-		<link href="http://www.bc547.de/infotechnik/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/grenzwissenschaften/css/bootstrap.min.css" rel="stylesheet">	
 		<link href="/grenzwissenschaften/css/grenz.css" rel="stylesheet" type="text/css" />
 		
 	</head>
