--- a/grenzwissenschaften/html/hans-peter-duerr.html
+++ b/grenzwissenschaften/html/hans-peter-duerr.html
@@ -9,7 +9,7 @@
 		
 		<title>bc547.de - Prof. Dr. Hans-Peter Dürr - Geist und Materie</title>
 
-		<link href="http://www.bc547.de/infotechnik/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/grenzwissenschaften/css/bootstrap.min.css" rel="stylesheet">	
 		<link href="/grenzwissenschaften/css/grenz.css" rel="stylesheet" type="text/css" />
 		
 	</head>
