--- a/grenzwissenschaften/html/menetekel.html
+++ b/grenzwissenschaften/html/menetekel.html
@@ -9,7 +9,7 @@
 		
 		<title>bc547.de - Grenzwissenschaften - Der Tod setzt keine Grenze</title>
 
-		<link href="http://www.bc547.de/infotechnik/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/grenzwissenschaften/css/bootstrap.min.css" rel="stylesheet">	
 		<link href="/grenzwissenschaften/css/grenz.css" rel="stylesheet" type="text/css" />
 
 	</head>
