--- a/grenzwissenschaften/html/nahtod.html
+++ b/grenzwissenschaften/html/nahtod.html
@@ -130,7 +130,7 @@
 												
 												<br />
 												
-												<iframe src="http://www.nderf.org/German/index_nte.htm" style="width:100%;height:800px; border:none;">No Iframe!</iframe>
+												<iframe src="https://www.nderf.org/German/index_nte.htm" style="width:100%;height:800px; border:none;"></iframe>
 						</div>
 					</div>
 				</div>
