--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,36 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>May. 30, 2017</b> - New Version 1.2.2-alpha. Updated armor system.
+			</p>
+
+			<br style="clear:left;" />
+			
+			<p>
+				<b>May. 28, 2017</b> - New Version 1.2.1-alpha. Fixed sneak-bug, improved german translation and reduced spawn-rate from Moonheron, Night master, Phoenix and Scrausics (Not So Simple Mobs).
+			</p>
+
+			<br style="clear:left;" />
+			
+			<p>
+				<b>May. 21, 2017</b> - New Version 1.2.0-alpha. Now with skins and better german translation! And many more little improvements.
+			</p>
+
+			<br style="clear:left;" />
+			
+			<p>
+				<b>May. 08, 2017</b> - New Version 1.1.9-alpha. Fixed bug in cave realms.
+			</p>
+
+			<br style="clear:left;" />
+			
+			<p>
+				<b>May. 06, 2017</b> - New Version 1.1.8-alpha. Fixed bug in swamp biome.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>May. 04, 2017</b> - Stonecraft v1.1.7-alpha released! Over 6.500+ Downloads!
 			</p>
 			
