Added flickr link

--- a/stonecraft/html/gallery.html
+++ b/stonecraft/html/gallery.html
@@ -51,6 +51,9 @@
     <div class="section section-dirt">
         <div class="container">
 			<h2>Screenshots from Stronecraft</h2>
+			
+			<p>This album is outdated. See more screenshots on my <a href="https://flic.kr/s/aHskYkS9Vc" target="_blank">Flickr album</a>.</p>
+			
 			<div class="row" style="margin-top:25px;">
 					
 			</div>
