--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Jul. 22, 2017</b> - New Version 1.2.4-alpha. Added Carpathian map generator and fixed bugs.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Jun. 10, 2017</b> - Over 10.000 Downloads!
 			</p>
 			
