Updated to version 1.2.5-alpha

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,23 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Oct. 10, 2017</b> - New version 1.2.5-alpha.<br /><br />
+
+				- More options to customize your world<br />
+				- Mapping kit for survival mode (you start without map)<br />
+				- "Nether" dimension<br />
+				- New mobs for the "Morlendor" dimension<br />
+				- New rideable horse<br />
+				- New animal "Felucco", spawns in the savannah<br />
+				- Improved net code (maybe incompatible with older servers)<br />
+				- Better performance<br />
+				- Bug fixes<br />
+				- and more...
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Jul. 22, 2017</b> - New Version 1.2.4-alpha. Added Carpathian map generator and fixed bugs.
 			</p>
 			
