Updated version to 1.2.6-alpha

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Oct. 18, 2017</b> - New version 1.2.6-alpha. Fixed bug in giant mushrooms etc.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Oct. 10, 2017</b> - New version 1.2.5-alpha.<br /><br />
 
 				- More options to customize your world<br />
