--- a/grenzwissenschaften/index.html
+++ b/grenzwissenschaften/index.html
@@ -142,7 +142,7 @@
 
 							<p style="margin-left:20px;">(Quelle: Lincoln Barnett, Einstein und das Universum, Fischer Bücherei, erschienen im Februar 1962, Seite 133)</p>
 
-							<p>Es wird Zeit <b>unser Bewusstsein für eine erweiterte Realität</b> jenseits der Materie zu öffnen und unser wahres Potential auszudrücken. Die Berichte auf diesen Seiten schildern nur Facetten einer unendlich größeren Realität, genauso wie alle Religionen nur verschiedene Wege zum gleichen Ziel sind, dem Ursprung allen Seins. Jedoch werden die meisten Menschen diese Informationen ablehnen, da sie noch nicht über die spirituelle Reife verfügen und noch viel zu materiell denken, aber für die kleine Minderheit, die sich bereits auf die Suche gemacht hat, die sollen hier spirituelles Wissen zum inneren Wachstum finden.</p>
+							<p>Es wird Zeit <b>unser Bewusstsein für eine erweiterte Realität</b> jenseits der Materie zu öffnen und unser wahres Potential auszudrücken. Die Berichte auf diesen Seiten schildern nur Facetten einer unendlich größeren Realität. Jedoch werden die meisten Menschen diese Informationen ablehnen, da für sie noch nicht die Zeit gekommen ist, aber für die kleine Minderheit, die sich bereits auf die Suche gemacht hat, die sollen hier spirituelles Wissen zum inneren Wachstum finden.</p>
 						</div>
 					</div>
 				</div>
