Added new version 1.2.7-alpha

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -132,6 +132,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Feb. 12, 2018</b> - New version 1.2.7-alpha. Fixed bugs, updated engine and worked on german translation.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Oct. 18, 2017</b> - New version 1.2.6-alpha. Fixed bug in giant mushrooms etc.
 			</p>
 			
@@ -329,7 +335,7 @@
             <h2>Download</h2>
 			<br style="clear:left;" />
 			
-			<p><b>Current release: v1.1.1-alpha (Apr. 15, 2017)</b><br /><small>(pre-release version, maybe not stable yet). Use of Minetest engine 0.4.15 and higher.</small></p>
+			<p><b>Current release: v1.2.7-alpha (Feb. 12, 2018)</b><br /><small>(pre-release version, maybe not stable yet). Use of modified Minetest engine 0.5.0-dev and higher.</small></p>
 			<!--
 			<div class="row">
                 <div class="col-xs-6 col-md-6">
