Removed Community server

--- a/stonecraft/html/impressum.html
+++ b/stonecraft/html/impressum.html
@@ -35,7 +35,7 @@
                 <p class="buttons">
                     <a class="btn btn-default btn-lg" role="button" href="/stonecraft/index.html#download">Download</a>
                     <a class="btn btn-default btn-lg" role="button" href="/stonecraft/html/gallery.html">Gallery</a>
-					<a class="btn btn-default btn-lg" role="button" href="/stonecraft/html/server.html">Server</a>
+					<!-- <a class="btn btn-default btn-lg" role="button" href="/stonecraft/html/server.html">Server</a>-->
 					<a class="btn btn-default btn-lg" role="button" href="https://github.com/MrCerealGuy/Stonecraft" target="_blank">Github</a>
                     <a class="btn btn-default btn-lg" role="button" href="https://github.com/MrCerealGuy/Stonecraft/wiki" target="_blank">Wiki</a>
                     <a class="btn btn-default btn-lg" role="button" href="/stonecraft/index.html#faq">FAQ</a>
