Redirect gallery to flickr album

--- a/stonecraft/html/server.html
+++ b/stonecraft/html/server.html
@@ -50,7 +50,7 @@
 
                 <p class="buttons">
                     <a class="btn btn-default btn-lg" role="button" href="/stonecraft/index.html#download">Download</a>
-                    <a class="btn btn-default btn-lg" role="button" href="/stonecraft/html/gallery.html">Gallery</a>
+                    <a class="btn btn-default btn-lg" role="button" href="https://flic.kr/s/aHskYkS9Vc">Gallery</a>
 					<a class="btn btn-primary btn-lg" role="button" href="#">Server</a>
 					<a class="btn btn-default btn-lg" role="button" href="https://github.com/MrCerealGuy/Stonecraft" target="_blank">Github</a>
                     <a class="btn btn-default btn-lg" role="button" href="https://github.com/MrCerealGuy/Stonecraft/wiki" target="_blank">Wiki</a>
