Added new version 1.2.9-alpha

--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -134,6 +134,12 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Aug. 31, 2018</b> - New version 1.2.9-alpha. This is the most stable version ever! Fixed many bugs and added new content. No more support for Win 32-bit.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Feb. 13, 2018</b> - New version 1.2.8-alpha. Hotfixes.
 			</p>
 			
@@ -343,7 +349,7 @@
             <h2>Download</h2>
 			<br style="clear:left;" />
 			
-			<p><b>Current release: v1.2.8-alpha (Feb. 13, 2018)</b><br /><small>(pre-release version, maybe not stable yet). Use of modified Minetest engine 0.5.0-dev and higher.</small></p>
+			<p><b>Current release: v1.2.9-alpha (Aug. 31, 2018)</b><br /><small>(pre-release version, maybe not stable yet). Use of modified Minetest engine 0.5.0-dev and higher.</small></p>
 			<!--
 			<div class="row">
                 <div class="col-xs-6 col-md-6">
