--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -134,213 +134,22 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>Apr. 14, 2021</b> - New version 1.3.1.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
+				<b>May 31, 2019</b> - New version 1.3.0. Stonecraft has left alpha version.
+			</p>
+			
+			<br style="clear:left;" />
+			
+			<p>
 				<b>Aug. 31, 2018</b> - New version 1.2.9-alpha. This is the most stable version ever! Fixed many bugs and added new content. No more support for Win 32-bit.
 			</p>
 			
-			<br style="clear:left;" />
 			
-			<p>
-				<b>Feb. 13, 2018</b> - New version 1.2.8-alpha. Hotfixes.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Feb. 12, 2018</b> - New version 1.2.7-alpha. Fixed bugs, updated engine and worked on german translation.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Oct. 18, 2017</b> - New version 1.2.6-alpha. Fixed bug in giant mushrooms etc.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Oct. 10, 2017</b> - New version 1.2.5-alpha.<br /><br />
-
-				- More options to customize your world<br />
-				- Mapping kit for survival mode (you start without map)<br />
-				- "Nether" dimension<br />
-				- New mobs for the "Morlendor" dimension<br />
-				- New rideable horse<br />
-				- New animal "Felucco", spawns in the savannah<br />
-				- Improved net code (maybe incompatible with older servers)<br />
-				- Better performance<br />
-				- Bug fixes<br />
-				- and more...
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Jul. 22, 2017</b> - New Version 1.2.4-alpha. Added Carpathian map generator and fixed bugs.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Jun. 10, 2017</b> - Over 10.000 Downloads!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>May. 30, 2017</b> - New Version 1.2.2-alpha. Updated armor system.
-			</p>
-
-			<br style="clear:left;" />
-			
-			<p>
-				<b>May. 28, 2017</b> - New Version 1.2.1-alpha. Fixed sneak-bug, improved german translation and reduced spawn-rate from Moonheron, Night master, Phoenix and Scrausics (Not So Simple Mobs).
-			</p>
-
-			<br style="clear:left;" />
-			
-			<p>
-				<b>May. 21, 2017</b> - New Version 1.2.0-alpha. Now with skins and better german translation! And many more little improvements.
-			</p>
-
-			<br style="clear:left;" />
-			
-			<p>
-				<b>May. 08, 2017</b> - New Version 1.1.9-alpha. Fixed bug in cave realms.
-			</p>
-
-			<br style="clear:left;" />
-			
-			<p>
-				<b>May. 06, 2017</b> - New Version 1.1.8-alpha. Fixed bug in swamp biome.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>May. 04, 2017</b> - Stonecraft v1.1.7-alpha released! Over 6.500 Downloads!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Apr. 15, 2017</b> - Stonecraft v1.1.1-alpha released! Over 3.100 Downloads!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Apr. 09, 2017</b> - 1.200+ Downloads in 12 days! Thank you for that successful launch of Stonecraft!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Mar. 27, 2017</b> - Stonecraft v1.1.0-alpha released! Published on the indie video game website <a href="https://mrcerealguy.itch.io/stonecraft" target="_blank">itch.io</a>. Download now and leave a comment!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Mar. 20, 2017</b> - Stonecraft v1.0.10-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Feb. 11, 2017</b> - Stonecraft v1.0.9-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Feb. 7, 2017</b> - Stonecraft v1.0.8-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Jan. 22, 2017</b> - Stonecraft WorldAtlas v1.0.0 now on <a href="https://github.com/MrCerealGuy/Stonecraft-WorldAtlas" target="_blank">github</a>.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Jan. 17, 2017</b> - Stonecraft v1.0.7-alpha released! Now with abandoned mines and surprise blocks!
-			</p>
-			
-			<div class="row">
-                <div class="col-xs-6 col-md-4">
-                    <div class="thumbnail">
-                        <a href="./gfx/gallery/screenshot_20170116_164604.png" class="fancybox" rel="news-20170117"><img src="./gfx/gallery/small/screenshot_20170116_164604.png" alt="screenshot+1"></a>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-md-4">
-                    <div class="thumbnail">
-                        <a href="./gfx/gallery/screenshot_20170116_164705.png" class="fancybox" rel="news-20170117"><img src="./gfx/gallery/small/screenshot_20170116_164705.png" alt="screenshot+2"></a>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-md-4">
-                    <div class="thumbnail">
-                        <a href="./gfx/gallery/screenshot_20170116_170733.png" class="fancybox" rel="news-20170117"><img src="./gfx/gallery/small/screenshot_20170116_170733.png" alt="screenshot+3"></a>
-                    </div>
-                </div>
-            </div>
-			
-			<br style="clear:left;" />
-
-			<p>
-				<b>Jan. 9, 2017</b> - First version of Stonecraft WorldAtlas is online. It shows the explored part from the huge world of the <i>Stonecraft Survival Server</i>. The software will be published for free and open-source. See the WorldAtlas <a href="http://stonecraft.ddns.net/map.html">here</a> in action.
-				<br /><br />
-				<a href="./gfx/stonecraft-mapviewer.png" class="fancybox"><img src="./gfx/stonecraft-mapviewer-300.png"></a>
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Jan. 7, 2017</b> - Stonecraft v1.0.6-alpha released! Updated engine to 0.4.15, added teleporters, area protection and more!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Jan. 3, 2017</b> - The official <a href="/stonecraft/html/server.html">Stonecraft Server</a> is online! Join the world of Stonecraft and play with friends.
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Dec. 23, 2016</b> - Stonecraft v1.0.5-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Dec. 22, 2016</b> - Stonecraft v1.0.4-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Dec. 18, 2016</b> - Stonecraft v1.0.3-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Dec. 16, 2016</b> - Stonecraft v1.0.2-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Dec. 11, 2016</b> - Stonecraft v1.0.1-alpha released!
-			</p>
-			
-			<br style="clear:left;" />
-			
-			<p>
-				<b>Dec. 9, 2016</b> - Stonecraft v1.0.0-alpha released!
-			</p>
 		</div>
 		
 		<a name="download"></a>
@@ -349,25 +158,7 @@
             <h2>Download</h2>
 			<br style="clear:left;" />
 			
-			<p><b>Current release: v1.2.9-alpha (Aug. 31, 2018)</b><br /><small>(pre-release version, maybe not stable yet). Use of modified Minetest engine 0.5.0-dev and higher.</small></p>
-			<!--
-			<div class="row">
-                <div class="col-xs-6 col-md-6">
-					<div>
-						<img src="./gfx/win-icon.png" style="float:left;margin-right:15px;">Stonecraft (Win 32-bit) <a href="http://www.mediafire.com/file/01i5x626i5f36la/setup-stonecraft-1.1.0a-win32.exe" target="_blank">EXE</a> | <a href="http://www.mediafire.com/file/172888mm815n6vo/stonecraft-1.1.0-alpha-client-win32.zip" target="_blank">ZIP</a>
-						<br />
-						Stonecraft (Win 64-bit) <a href="http://www.mediafire.com/file/yx6pftccj3r2bg7/setup-stonecraft-1.1.0a-win64.exe" target="_blank">EXE</a> | <a href="http://www.mediafire.com/file/we0c6nqlek2nlef/stonecraft-1.1.0-alpha-client-win64.zip" target="_blank">ZIP</a>
-					</div>
-				</div>
-				
-				 <div class="col-xs-6 col-md-6">
-					<div>
-						<img src="./gfx/linux-icon.png" style="float:left;margin-right:15px;">Stonecraft (Linux 64-bit) <a href="http://www.mediafire.com/file/4ky2c2qmmxia12r/stonecraft-1.1.0-alpha-client-linux.tar.gz" target="_blank">TAR.GZ</a>
-						<br />
-						Dedicated Server (Linux 64-bit) <a href="http://www.mediafire.com/file/28aecdgqod15wev/stonecraft-1.1.0-alpha-server-linux.tar.gz" target="_blank">TAR.GZ</a>
-					</div>
-				</div>
-			</div>-->
+			<p><b>Current release: v1.3.1 (Apr. 14, 2021)</b></p>
 			
 			<iframe frameborder="0" src="https://itch.io/embed/130455" width="552" height="167"></iframe>
 			
