--- a/stonecraft/index.html
+++ b/stonecraft/index.html
@@ -134,6 +134,10 @@
 			<br style="clear:left;" />
 			
 			<p>
+				<b>May. 11, 2025</b> - New version 1.3.2. <b>BIG UPDATE!</b>
+			</p>
+			
+			<p>
 				<b>Apr. 14, 2021</b> - New version 1.3.1.
 			</p>
 			
@@ -158,7 +162,7 @@
             <h2>Download</h2>
 			<br style="clear:left;" />
 			
-			<p><b>Current release: v1.3.1 (Apr. 14, 2021)</b></p>
+			<p><b>Current release: v1.3.2 (May. 5, 2025)</b></p>
 			
 			<iframe frameborder="0" src="https://itch.io/embed/130455" width="552" height="167"></iframe>
 			
